change the way locale providers flag is set